kustomize/apps/analytics/orchestrator/ingressroutes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik-traefik-v2
    app.kubernetes.io/name: traefik
  name: orchestrator
  namespace: vms
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host (`example.com`)
    services:
    - kind: Service
      name: orchestrator
      port: 80
      scheme: http
